--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,7 +5,8 @@ on:
     secrets:
       ambiente:
         required: true
-        description: "Ambiente onde vai ser feito o deploy"
+        description: 'Ambiente de entrega'
+    
 
 jobs:
     Deploy-kubernetes:
