--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
     needs: CI
     uses: rodrigoavino/repo-deploy/.github/workflows/cd.yml@main
     secrets: 
-      ambiente: inherit
+      ambiente: ${{ secrets.AMBIENTE_ENTREGAR }}  # ou por inherit
