--- a/cd-01.yml
+++ b/cd-01.yml
@@ -14,7 +14,7 @@ jobs:
         steps:
           - name: Build imagem docker
             run: |
-                echo "Deploy ambiente de ${{ secrets.AMBIENTE_ENTREGAR }}.."
+                echo "Deploy ambiente de ${{ secrets.ambiente }}.."
           - name: Curl deploy ambiente
             run: |
-               curl -X POST https://webhook.site/9c39c68b-8be8-4d0d-a604-7e0dd05f3591 -d "{ ambiente: '${{ secrets.AMBIENTE_ENTREGAR }}' }"
+                echo ${{ secrets.ambiente }}
