--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,4 @@ jobs:
   CD:
     needs: CI
     uses: rodrigoavino/repo-deploy/.github/workflows/cd.yml@main
-    secrets: 
-      ambiente: inherit
+    secrets: inherit
