--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,16 +1,14 @@
-name: Deploy Fake Secret
+name: CD FAKE
 run-name: Deploy Fake ${{ github.run_number }}
 on:
   workflow_call:
 
 
 jobs:
-    Deploy-kubernetes:
+    Deploy-fake:
         runs-on: ubuntu-latest
         steps:
-          - name: Build imagem docker
+          - name: fake d edeploy ambiente
             run: |
-                echo "Deploy ambiente de ${{ secrets.AMBIENTE_ENTREGAR }}.."
-          - name: Curl deploy ambiente
-            run: |
-               curl -X POST https://webhook.site/9c39c68b-8be8-4d0d-a604-7e0dd05f3591 -d "{ ambiente: '${{ secrets.AMBIENTE_ENTREGAR }}' }"
+                echo "Deploy ambiente de ${{ vars.AMBIENTE_DEPLOY }}.."
+          
