--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,14 @@
-name: CI/CD Fake Secret
+name: CD FAKE
 run-name: Deploy Fake ${{ github.run_number }}
-
 on:
   workflow_dispatch:
 
- 
+
 jobs:
-  CI:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Build imagem docker
-        run: |
-          echo "Building Docker image..."
-      - name: Execucao de testes
-        run: |
-          echo "Running tests..."
-      - name: Publicando a release
-        run: |
-          echo "Publishing release..."       
-  CD:
-    needs: CI
-    uses: rodrigoavino/repo-deploy/.github/workflows/cd.yml@main
-    secrets: inherit
+    Deploy-fake:
+        runs-on: ubuntu-latest
+        steps:
+          - name: fake d edeploy ambiente
+            run: |
+                echo "Deploy ambiente de ${{ vars.AMBIENTE_DEPLOY }}.."
+          
