--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
 jobs:
     Deploy-fake:
         runs-on: ubuntu-latest
+        environment: homologacao
         steps:
           - name: fake d edeploy ambiente
             run: |
