--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,21 @@ name: CD FAKE
 run-name: Deploy Fake ${{ github.run_number }}
 on:
   workflow_dispatch:
+      inputs:
+        AMBIENTE_DEPLOY:
+          description: 'Ambiente de deploy'
+          required: true
+          type: choice
+          default: homologacao
+          options:
+            - homologacao
+            - producao
 
 
 jobs:
     Deploy-fake:
         runs-on: ubuntu-latest
-        environment: homologacao
+        environment: ${{ inputs.AMBIENTE_DEPLOY }}
         steps:
           - name: fake d edeploy ambiente
             run: |
